# fakenews

./: .gitignore  README.md  pyproject.toml
src/: database.py  generate.py  main.py  scrape.py
