[project]
name = "fakenews"
version = "0.1.0"
description = "Fake NEws"
authors = [
    {name = "Tim Scott",email = "99059109+TheTimbob@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.97.1,<2.0.0)",
    "feedparser (>=6.0.11,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"